checking in since I figured out how to get to the javascript variables

--- a/plonetheme/diazo_responsivetheme/theme/index.html
+++ b/plonetheme/diazo_responsivetheme/theme/index.html
@@ -40,9 +40,9 @@
     <script type="text/javascript" src="++resource++plone.app.jquerytools.overlayhelpers.js"></script>
     <script type="text/javascript" src="++resource++plone.app.jquerytools.form.js"></script>
     <script type="text/javascript" src="js/register_function.js"></script>
-    <!-- FIXME, see: Products/CMFPlone/browser/jsvariables.py. Suggestions?
-    <script type="text/javascript" src="http://localhost:8080/Plone/portal_javascripts/Sunburst%20Theme/plone_javascript_variables.js"></script>
-    -->
+    <!-- FIXME, see: Products/CMFPlone/browser/jsvariables.py. Suggestions? -->
+    <!-- <script type="text/javascript" src="http://localhost:8080/newmobile/portal_javascripts/Sunburst%20Theme/plone_javascript_variables.js"></script> -->
+    
     <script type="text/javascript" src="js/nodeutilities.js"></script>
     <script type="text/javascript" src="js/cookie_functions.js"></script>
     <script type="text/javascript" src="js/modernizr.js"></script>
@@ -71,6 +71,7 @@
     <script type="text/javascript" src="js/jquery.tinymce.js"></script>
     <script type="text/javascript" src="js/respond.js"></script>
     <script type="text/javascript" src="js/plone-rwd-nav.js"></script>
+    <script type="text/javascript" src="++resource++jsi18n.js"></script>
     <script type="text/javascript" src="js/ios-orientationchange-fix.js"></script>
     <script type="text/javascript" src="js/add_responsive_class_names.js"></script>
     <script type="text/javascript" src="http://localhost:8080/Plone/portal_javascripts/Sunburst%20Theme/tiny_mce_gzip.js"></script>
