--- a/plonetheme/diazo_responsivetheme/theme/index.html
+++ b/plonetheme/diazo_responsivetheme/theme/index.html
@@ -69,7 +69,7 @@
     <script type="text/javascript" src="js/formsubmithelpers.js"></script>
     <script type="text/javascript" src="js/unlockOnFormUnload.js"></script>
     <script type="text/javascript" src="js/jquery.tinymce.js"></script>
-    <script type="text/javascript" src="js/respond.js"></script>
+    <script type="text/javascript" src="js/respond.src.js"></script>
     <script type="text/javascript" src="js/plone-rwd-nav.js"></script>
     <script type="text/javascript" src="++resource++jsi18n.js"></script>
     <script type="text/javascript" src="js/ios-orientationchange-fix.js"></script>
